--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@
 ################################################################################
 
 /.vs
+/bin/Debug
+/obj/Debug
+/obj/Docker
 node_modules/
 **/.DS_Store
 **/.env
